1-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: otus
spec:
  type: ClusterIP
  ports:
    - port: 7000
      targetPort: 8000
  selector:
    app: myapp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fisrthometask
  namespace: otus
  labels:
    app: test
spec:
  selector:
    matchLabels:
      app: myapp
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - image: andrey4281/otusfirsttask:0.0.1
          name: simpeservice
          ports:
            - containerPort: 8000
          imagePullPolicy: IfNotPresent
