2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  namespace: otus
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - backend:
              service:
                name: myapp
                port:
                  number: 7000
            pathType: Prefix
            path: /
